# Web-Scraping-BMW-used-cars

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bmw_cars.db  docker-compose.yml  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: lint.yml
app/: items.py  loaders.py  main.py  middlewares.py  pipelines.py  settings.py
app/spiders/: bmw.py
tests/: conftest.py  test_api.py  test_middlewares.py  test_pipelines.py  test_spider.py
