[project]
name = "bmw-used-cars"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Herasymchuk",email = "serhiy1204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "scrapy (>=2.14.2,<3.0.0)",
    "scrapy-playwright (>=0.0.46,<0.0.47)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
