[project]
name = "bmw-used-cars"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Herasymchuk",email = "serhiy1204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "scrapy (>=2.14.2,<3.0.0)",
    "scrapy-playwright (>=0.0.46,<0.0.47)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "coverage-badge (>=1.1.2,<2.0.0)",
    "genbadge (>=1.1.3,<2.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
